--- a/dist.ini
+++ b/dist.ini
@@ -6,19 +6,21 @@ copyright_holder = Bruno Vecchi
 [License]
 [Manifest]
 [ManifestSkip]
-[AllFiles]
+[GatherDir]
 [PruneCruft]
-[InstallDirs]
+[ExecDir]
+[ShareDir]
 [MetaJSON]
 [ReadmeFromPod]
 [PkgVersion]
-[PodTests]
+[PodSyntaxTests]
 [ExtraTests]
 [ModuleBuild]
+[PodWeaver]
 
 [Repository]
 [NextRelease]
-[PodWeaver]
+[ConfirmRelease]
 
 [AutoVersion]
 major = 0
